# emol

./: .cursorrules  .dockerignore  .flake8  .gitignore  .isort.cfg  .pylintrc  .tool-versions  CLAUDE.md  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  docker-compose.prod.yml.example  docker-compose.test.yml.example  docker-compose.yml  mypy.ini  pyproject.toml  test.txt
config/: dev_disciplines.json  local_prod.py.example
docs/: ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER_SETUP.md  DEVELOPMENT.md  DOCKER_ONLY_DEVELOPMENT.md  DOCKER_ON_LIGHTSAIL_INSTANCE.md  OVERVIEW.md  SETTINGS_SAMPLE_DEV.md  SETTINGS_SAMPLE_PRODUCTION.md  SETTINGS_STRUCTURE.md  SETTINGS_TEMPLATE.md  SSH.md  TESTING_BEFORE_CUTOVER.md
emol/cards/: urls.py
emol/cards/admin/: __init__.py  authorization.py  card.py  combatant.py  discipline.py  marshal.py  one_time_code.py  permission.py  privacy.py  reminder.py  update_code.py  user_permission.py  waiver.py
emol/cards/api/: card.py  combatant.py  combatant_authorization.py  combatant_warrant.py  permissions.py  pin.py  privacy.py  serializer_fields.py  urls.py  waiver.py
emol/cards/mail/: __init__.py  (+1 more)
emol/current_user/: __init__.py  middleware.py
emol/emailer/: __init__.py  tests.py
emol/emol/: asgi.py  secrets.py  urls.py  wsgi.py
emol/feature_switches/: __init__.py  admin.py  apps.py  helpers.py  models.py  tests.py
emol/global_throttle/: decorators.py  middleware.py  tests.py
emol/settings/: dev.py
emol/sso_user/: decorators.py  google_oauth.py  tests.py  urls.py  views.py
scripts/: bootstrap-deploy.sh  build-and-push.sh  deploy-docker.sh  generate-compose.py
setup_files/: README.md  bootstrap.sh  build-and-push.sh  docker-entrypoint-dev.sh  docker-entrypoint-prod.sh  docker-entrypoint.sh
setup_files/configs/: emol  emol-logrotate  proxy_params
setup_files/host/: deploy-docker.sh
setup_files/old/: bump_version.sh
(+115 files in other folders)
