[tool.poetry]
name = "emol"
version = "0.1.0"
description = "The Electronic Minister of the Lists"
authors = ["Ealdormere Web Team"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^4.2"
authlib = "^1.3.0"
requests = "^2.31.0"
python-dateutil = "^2.9.0.post0"
djangorestframework = "^3.15.1"
django-cors-headers = "^4.3.1"
gunicorn = "^22.0.0"
boto3 = "^1.34.85"
cffi = ">=1.17,<1.18"
mysqlclient = "^2.2.4"
django-permissions-policy = "^4.19.0"
django-csp = "^3.8"
django-dirtyfields = "^1.9.2"
markdown = "^3.10"
whitenoise = "^6.11.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
pylint = "^3.1.0"
types-requests = "^2.31.0.20240406"
mypy = "^1.9.0"
django-debug-toolbar = "^4.2.0"
pylint-django = "^2.6.1"
django-stubs = "^5.2.8"
django-stubs-ext = "^5.2.8"
djangorestframework-stubs = "^3.16.6"
pylint-per-file-ignores = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
